envoy-filter-examples/custom-log-format-logdna.yaml
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: "envoy-filter-ghost-jsonlogformat"
  namespace: ghost
spec:
  configPatches:
  - applyTo: NETWORK_FILTER
    match:
      context: ANY
      listener:
        filterChain:
          filter:
            name: "envoy.filters.network.http_connection_manager"
    patch:
      operation: MERGE
      value:
        typed_config:
          "@type": "type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager"
          access_log:
          - name: envoy.access_loggers.file
            typed_config:
              "@type": "type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog"
              path: /dev/stdout
              "json_format": {
                authority: "%REQ(:AUTHORITY)%",
                bytes_received: "%BYTES_RECEIVED%",
                bytes_sent: "%BYTES_SENT%",
                downstream_local_address: "%DOWNSTREAM_LOCAL_ADDRESS%",
                downstream_remote_address: "%DOWNSTREAM_REMOTE_ADDRESS%",
                duration: "%DURATION%",
                request_duration: "%REQUEST_DURATION%",
                response_duration: "%RESPONSE_DURATION%",
                response_tx_duration: "%RESPONSE_TX_DURATION%",
                istio_policy_status: "%DYNAMIC_METADATA(istio.mixer:status)%",
                method: "%REQ(:METHOD)%",
                path: "%REQ(X-ENVOY-ORIGINAL-PATH?:PATH)%",
                protocol: "%PROTOCOL%",
                request_id: "%REQ(X-REQUEST-ID)%",
                requested_server_name: "%REQUESTED_SERVER_NAME%",
                response_code: "%RESPONSE_CODE%",
                response_code_details: "%RESPONSE_CODE_DETAILS%",
                response_flags: "%RESPONSE_FLAGS%",
                route_name: "%ROUTE_NAME%",
                start_time: "%START_TIME%",
                upstream_cluster: "%UPSTREAM_CLUSTER%",
                upstream_host: "%UPSTREAM_HOST%",
                upstream_local_address: "%UPSTREAM_LOCAL_ADDRESS%",
                upstream_service_time: "%RESP(X-ENVOY-UPSTREAM-SERVICE-TIME)%",
                upstream_transport_failure_reason: "%UPSTREAM_TRANSPORT_FAILURE_REASON%",
                user_agent: "%REQ(USER-AGENT)%",
                x_forwarded_for: "%REQ(X-FORWARDED-FOR)%"
              }
