envoy-filter-examples/delayed_close_timeout_eof.yaml
# https://github.com/istio/istio/issues/30577
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: delayedclose
  namespace: istio-system
spec:
  configPatches:
  - applyTo: NETWORK_FILTER
    match:
      listener:
        filterChain:
          filter:
            name: "envoy.filters.network.http_connection_manager"
    patch:
      operation: MERGE
      value:
        typed_config:
          "@type": "type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager"
          delayed_close_timeout: 30s
