envoy-filter-examples/gateway-custom-idle-timeout.yaml
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: "custom-idle-timeout"
  namespace: "istio-system"
spec:
  configPatches:
  - applyTo: CLUSTER
    match:
      context: ANY
    patch:
      operation: MERGE
      value:
        common_http_protocol_options:
          idle_timeout: 8h
