envoy-filter-examples/output-header-body.yaml
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: envoy-filter
  namespace: istio-system
spec:
  configPatches:
  - applyTo: HTTP_FILTER
    match:
      context: GATEWAY
      listener:
        filterChain:
          filter:
            name: "envoy.filters.network.http_connection_manager"
    patch:
      operation: INSERT_BEFORE
      value: # lua filter specification
        name: envoy.lua
        typed_config:
          "@type": "type.googleapis.com/envoy.extensions.filters.http.lua.v3.Lua"
          inlineCode: |
            function envoy_on_request(request_handle)
            
              headers = request_handle:headers()
              print("HEADERS:")
              for key, value in pairs(headers) do
                print(string.format(" - %s: %s", tostring(key), tostring(value)))
              end

              local body = request_handle:body()
              print("BODY:")
              print(tostring(body:getBytes(0, body:length())))
              io.flush()
            end
